# Cancer_Analysis-

./: Dockerfile  README.md  cancer_analysis.ipynb  main.py  pyproject.toml  requirements.txt
artifacts/: best_model.pkl  scaler.pkl
src/cancer_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_inferencing/: api.py  inference.py
src/model_training/: data_initialization.py  data_transformation.py  model_building.py
static/: index.html
testing/: test_file.json
